# hs-cmdLineTester

./: .gitignore  README.md  autoTest.hs  hs-cmdLineTester.cabal  template.test
app/: hs-test.hs
src/: Tester.hs
